fix image in cropper

--- a/apps/journal/src/global.scss
+++ b/apps/journal/src/global.scss
@@ -82,11 +82,14 @@ ion-list {
 
 img {
   display: block;
-  margin: auto;
   -webkit-user-drag: none;
   -khtml-user-drag: none;
   -moz-user-drag: none;
   -o-user-drag: none;
+}
+
+image-cropper img {
+  margin: auto;
 }
 
 [contenteditable] {
